# route_manager

./: .dockerignore  .gitignore  Dockerfile  README.md  RouteManager.code-workspace  app.py  compose.yaml  docker-compose.yaml  environment.yml  main.py  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: test_and_lint.yml
documentation/: FITNESS.md
graph_cache/: graph_(51.5025031, -0.15081986768597055)_1000_skate.graphml  graph_(51.5025031, -0.15081986768597055)_900_skate.graphml
route_manager/: __init__.py  constants.py  filter_manager.py  fitness.py  osm_filter.py  route_manager.py  score_calcs.py
tests/: __init__.py  test_data.py  test_filter_manager.py  test_fitness.py  test_osm_filter.py  test_route_manager.py  test_score_calcs.py
