[metadata]
name = Route Manager
version = 0.1
author = Francois McDonald
author_email = fmcd_01@yahoo.com
packages = find:

[options]
install_requires =
    osmnx
    flake8
    pytest
    black
    pytest-cov

[tool:pytest]
addopts = -ra -q
testpaths = tests 
pythonpath = src
log_cli = True
log_cli_level = WARNING

[flake8]
count = True
select = E9,E501,F63,F7,F82,D
show-source = True
statistics = True
max-complexity = 10
max-line-length = 80
docstring-convention=numpy